# MAVIS

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  refactor_plan.md
benches/: cpu_cycle.rs
ci/: build.sh
crates/mavis-core/: Cargo.toml
crates/mavis-core/src/: error.rs  lib.rs
crates/mavis-core/src/config/: loader.rs  mod.rs  watcher.rs
crates/mavis-core/src/conpty/: mod.rs
crates/mavis-core/src/lua/: mod.rs
crates/mavis-core/src/lua/api/: keybindings.rs  logging.rs  mod.rs  system.rs  theme.rs  widgets.rs
crates/mavis-core/src/lua/sandbox/: mod.rs
crates/mavis-core/src/monitor/: mod.rs
crates/mavis-core/src/monitor/cpu/: mod.rs
crates/mavis-core/src/monitor/disk/: mod.rs
crates/mavis-core/src/monitor/memory/: mod.rs
crates/mavis-core/src/monitor/network/: mod.rs
crates/mavis-core/src/utils/: filesystem.rs  mod.rs
crates/mavis-gui/: Cargo.toml
crates/mavis-gui/src/: error.rs  lib.rs  renderer.rs  state.rs  ui.rs  widgets.rs.bak  window.rs
crates/mavis-gui/src/ide/: mod.rs
crates/mavis-gui/src/widgets/: mod.rs  terminal.rs
crates/mavis-gui/src/widgets/terminal/: mod.rs
crates/mavis-shell/: Cargo.toml
crates/mavis-shell/src/: lib.rs  main.rs
docs/: final_implementation_plan.md  ide_integration_plan.md  implementation_plan.md  implementation_plan_phase1.md  mvp_completion_assessment.md  mvp_summary.md  mvp_work_breakdown.md
examples/: example_widget.lua
scripts/: gen_sentinel_bindings.rs
src/: main.rs
tests/: shell_integration.rs
tools/: tidy-config.rs
