[package]
name = "mavis-shell"
version = "0.1.0-alpha"
edition = "2025"
authors = ["MAVIS Contributors"]
description = "Shell replacement functionality for the MAVIS environment"
license = "MIT"

[lib]
name = "mavis_shell"
path = "src/lib.rs"

[dependencies]
# Core dependencies
mavis-core = { path = "../mavis-core" }
mavis-gui = { path = "../mavis-gui" } # Added GUI dependency

# Windows API integration
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Console",
] }

# Error handling
thiserror = "1.0.58"
anyhow = "1.0.80"

# Logging
log = "0.4.21"

# ConPTY helpers for terminal
crossterm = "0.27.0"

# Process management
winapi = { version = "0.3.9", features = ["wincon", "winuser", "consoleapi", "processthreadsapi"] }